WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222005
REGRESSION (
r271493
) Crash in +[NSAttributedString(WKPrivate) _loadFromHTMLWithOptions:contentLoader:completionHandler:] on background thread
https://bugs.webkit.org/show_bug.cgi?id=222005
Summary
REGRESSION (r271493 ) Crash in +[NSAttributedString(WKPrivate) _loadFromHTMLW...
Brady Eidson
Reported
2021-02-16 15:12:38 PST
REGRESSION (
r271493
) Crash in +[NSAttributedString(WKPrivate) _loadFromHTMLWithOptions:contentLoader:completionHandler:] on background thread This method is meant to be thread safe by dispatching background thread work back up to WebKit's main thread. If called before Webkit is initialized on the main thread, it gets it wrong. Restore this call site back to dispatch_async to fix.
Attachments
Patch
(1.59 KB, patch)
2021-02-16 15:54 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2021-02-16 15:54:28 PST
Created
attachment 420556
[details]
Patch Even tried to write a test, but TestWebKitAPI isn't set up right for it :)
Geoffrey Garen
Comment 2
2021-02-16 16:13:24 PST
Comment on
attachment 420556
[details]
Patch r=me
EWS
Comment 3
2021-02-16 18:31:35 PST
Committed
r272972
: <
https://commits.webkit.org/r272972
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420556
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-02-16 18:32:15 PST
<
rdar://problem/74416544
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug