REGRESSION (r271493 ) Crash in +[NSAttributedString(WKPrivate) _loadFromHTMLWithOptions:contentLoader:completionHandler:] on background thread <rdar://problem/74038372> and https://bugs.webkit.org/show_bug.cgi?id=222005

Reviewed by Geoffrey Garen.

Test not possible as TestWebKitAPI seems to always initialize WebKit on the main thread.

* UIProcess/API/Cocoa/NSAttributedString.mm:
(+[NSAttributedString _loadFromHTMLWithOptions:contentLoader:completionHandler:]): Switch this RunLoop::main() back to dispatch_async to main.


Canonical link: https://commits.webkit.org/234175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272972 268f45cc-cd09-0410-ab3c-d52691b4dbfc